<resources>
    <string name="app_name">Portal Auto Center</string>
    <string name="tab_text_1">Destaques</string>
    <string name="tab_text_2">Produtos</string>
    <string name="tab_text_3">Serviços</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="titulo_exemplo">Exemplo Maneiro</string>
    <string name="texto_exemplo">O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento.</string>
    <string name="dinheiro">R$XXX,XX</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="erroVazio">Este campo não pode ser vazio!</string>
    <string name="formatoSenhaIncorreto">A senha deve ter no mínimo 8 caractéres, sendo no mínimo um caracter maiúsculo e contendo um número</string>
    <string name="editar">Editar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_abastecimento">AbastecimentoActivity</string>
    <string name="modelo_carro">Ford Mustang 3.7 V6</string>
    <string name="placa_carro">ABC-1234</string>
    <string name="title_activity_controle_abastecimento">Controle de Abastecimento</string>
    <string name="title_activity_visualizar_abastecimento">Visualizar Abastecimentos</string>
    <string name="title_activity_carros_abastecimento">Selecione um Veículo</string>
    <string name="title_activity_inserir_abastecimento">Registrar Abastecimento</string>
    <string name="DATABASE_NAME">abastecimento</string>
    <string name="insert_abastecimento">Abastecimento adcionado com sucesso</string>
    <string name="title_activity_endereco">Gerenciar Endereços</string>
    <string name="logradouro">Rua José Martim Coutinho</string>
    <string name="num">1827</string>
    <string name="bairro">Jd. Teste</string>
    <string name="cep">09748-123</string>
    <string name="tpEndereco">Residencial</string>
    <string name="title_activity_insert_endereco">Gerenciar Endereço</string>
    <string name="title_activity_detalhe_produto">Detalhes Produto</string>
    <string name="title_activity_carrinho">Carrinho de Compras</string>
    <string name="title_activity_pagamento">Confirmar Pagamento</string>
    <string name="title_activity_servico">ServicoActivity</string>
    <string name="title_activity_pedidos">Pedidos</string>
</resources>
