<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.portalautocenter.app.CadastroUsuarioActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/sample_1"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:tint="@android:color/background_light"
            app:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
    </android.support.design.widget.CoordinatorLayout>

    <EditText
        android:id="@+id/txt_nome"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="255"
        android:hint="@string/nome"/>

    <EditText
        android:id="@+id/txt_cpf"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="255"
        android:hint="@string/cpf"/>

    <EditText
        android:id="@+id/txt_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/txt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Data de Nascimento"
        android:focusable="false"/>

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="255"
        android:hint="@string/usuario"/>

    <EditText
        android:id="@+id/txt_senha"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="16"
        android:hint="@string/senha"/>

    <Button
        android:id="@+id/btn_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textColor="#fff"
        android:backgroundTint="@color/colorAccent"
        android:layout_gravity="center"/>

</LinearLayout>
