<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imagem_produto"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src="@drawable/sample_1"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/txt_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_exemplo"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:text="@string/texto_exemplo"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/txt_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dinheiro"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"/>



</LinearLayout>