<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.portalautocenter.app.LoginActivity"
    android:orientation="vertical"
    android:padding="16dp">
    
    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/txt_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="#fff"
        android:backgroundTint="@color/colorAccent"
        android:layout_gravity="end"/>
</LinearLayout>
