<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.portalautocenter.app.DetalheProdutoActivity"
    tools:showIn="@layout/activity_detalhe_produto"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/nome"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <ImageView
        android:id="@+id/img_produto"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="@string/bairro"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="@string/dinheiro"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/txt_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
