<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagem_produto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/sample_1"/>

            <TextView
                android:id="@+id/txt_produto"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/titulo_exemplo"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/texto_exemplo"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/txt_preco"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/dinheiro"
                android:textAlignment="viewEnd"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>